# Pokemath

./: .gitignore  AI_USAGE.md  README.md  funciones.c  funciones.h  main.c  pokemath  programa
qt/: CMakeLists.txt  Grado.h  Grado1.cpp  Grado3.cpp  Jugador.h  Pregunta.cpp  Pregunta.h  PreguntasGrado1.cpp  PreguntasGrado2.h  PreguntasGrado3.cpp  PreguntasGrado3.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Colores.h  Combate.cpp  Combate.h  Grado.cpp  Grado.h  Grado1.cpp  Grado1.h  Grado2.cpp  Grado2.h  Grado3.cpp  Grado3.h  Jugador.cpp  Jugador.h  Menu.cpp  Menu.h  Pregunta.cpp  Pregunta.h  PreguntasGrado1.cpp  PreguntasGrado1.h  PreguntasGrado2.cpp  PreguntasGrado2.h  PreguntasGrado3.cpp  PreguntasGrado3.h  main.cpp
